--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1511,7 +1511,7 @@
         margin: 0;
         flex-wrap: wrap;
         overflow-y: scroll;
-        margin-top: 115px;
+        margin-top: -185px;
         height: 100px;
     }
     ul::-webkit-scrollbar {
@@ -1546,16 +1546,17 @@
         bottom: 5vh;
         background: url(../img/watch.png);
         background-size: cover;
-        z-index: 1000;
+        z-index: 999;
     }
     #glass {
-        position: absolute;
+        position: relative;
         width: 195px;
         height: 303px;
         right: 0vh;
         bottom: 0vh;
         background: url(../img/glass.png);
         background-size: cover;
+        z-index: 1000;
     }
     /* DOTS */
     #dots1 {
@@ -1750,7 +1751,7 @@
     }
     .player {
         position: relative;
-        top: 120px;
+        top: -180px;
         left: 40px;
         border: none;
         background-color: transparent;
@@ -1763,7 +1764,7 @@
     }
     .stop {
         position: relative;
-        top: 115px;
+        top: -185px;
         left: 35px;
         border: none;
         background-color: transparent;
